--- a/css/common.css
+++ b/css/common.css
@@ -346,6 +346,10 @@ footer {
 }
 
 @media screen and (max-width: 400px) {
+        .footer_notice {
+        gap: 5px;
+    }
+    
     .footer_notice a {
         font-size: 8px;
     }
