--- a/css/style.css
+++ b/css/style.css
@@ -743,7 +743,8 @@ main {
 
   .program-list .title,
   .program-list .quota,
-  .program-list .status {
+  .program-list .status
+  .program-list .time {
     font-size: 8px;
   }
 }
